fix: blurred canvas output and margin

--- a/src/layout/graph/graph.module.css
+++ b/src/layout/graph/graph.module.css
@@ -1,6 +1,7 @@
 .container {
     width: inherit;
     height: 17.8rem;
+    cursor: pointer;
 }
 
 #graph_title {
